twitter login is working

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TWITTER_KEY= TWNVOqTHaCMFZ64ULKa0FVci1
-TWITTER_SECRET=  3HHwqWdEYyyjI0EENcBmUlw7rPvIFRY0nOHqZxZdX6aRyT7jm0
+TWITTER_KEY=KN6KJBag9XZmsC8mfs2YHvas3
+TWITTER_SECRET=DVdfVjGc47i6r7BCrulBObSujIToIXgvZyxfY6RZtm9fW067mu
